<?xml version="1.0" encoding="utf-8"?>
<!-- 分享 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 分隔线 -->
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp" >

        <!-- QQ -->
        <TextView
            android:id="@+id/share_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/share_item_qq"
            android:drawableTop="@drawable/share_qq_icon"/>
        
        <!-- QQ空间 -->
        <TextView
            android:id="@+id/share_qq_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/share_item_qqzone"
            android:drawableTop="@drawable/share_qq_zone" />

        <!-- 微信 -->
        <TextView
            android:id="@+id/share_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/share_item_wx"
            android:drawableTop="@drawable/share_wx_icon"/>
        
        <!-- 微信 朋友圈 -->
        <TextView
            android:id="@+id/share_wx_pyq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/share_item_wxpyq"
            android:drawableTop="@drawable/share_pyq" />
        
        <!-- 新浪 -->
        <TextView
            android:id="@+id/share_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/share_item_sina"
            android:drawableTop="@drawable/share_sina" />
    </LinearLayout>

</LinearLayout>